<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/dialogContainer"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/match_winners_bg"
    android:padding="20dp">

    <TextView
        android:id="@+id/roundLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@color/transparent"
        android:text="@string/label_dialog_round"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@android:color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/headerIcon1"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:background="@color/transparent"
        android:contentDescription="@string/header_icon_content_description"
        android:src="@drawable/ic_trophy"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/roundLabel" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/winnersRecyclerView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:background="@color/transparent"
        app:layout_constraintBottom_toTopOf="@+id/okButton"
        app:layout_constraintTop_toBottomOf="@+id/headerIcon1"
        tools:itemCount="2"
        tools:layout_editor_absoluteX="5dp"
        tools:listitem="@layout/dialog_match_winner_item" />

    <TextView
        android:id="@+id/okButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:background="@drawable/dialog_button_background"
        android:padding="12dp"
        android:text="@string/action_alright"
        android:textColor="@android:color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
