<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="4dp"
    android:background="@drawable/rounded_black_overlay"
    android:clickable="true"
    android:focusable="true"
    android:padding="8dp">

    <ImageView
        android:id="@+id/homeTeamIcon"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:background="@color/transparent"
        android:contentDescription="@string/content_desc_home_team_icon"
        android:padding="3dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/homeTeamName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:src="@drawable/ic_team_a" />

    <TextView
        android:id="@+id/homeTeamName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:background="@color/transparent"
        android:textAppearance="?attr/textAppearanceListItem"
        android:textColor="@android:color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/scoreLayout"
        app:layout_constraintStart_toEndOf="@id/homeTeamIcon"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="Team A" />

    <LinearLayout
        android:id="@+id/scoreLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:background="@color/transparent"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/awayTeamName"
        app:layout_constraintStart_toEndOf="@id/homeTeamName"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/homeTeamScore"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/transparent"
            android:textAppearance="?attr/textAppearanceListItem"
            android:textColor="@android:color/white"
            android:textStyle="bold"
            tools:text="5" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/transparent"
            android:text="@string/label_score_divider"
            android:textAppearance="?attr/textAppearanceListItem"
            android:textColor="@android:color/white"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/awayTeamScore"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/transparent"
            android:textAppearance="?attr/textAppearanceListItem"
            android:textColor="@android:color/white"
            android:textStyle="bold"
            tools:text="1" />
    </LinearLayout>

    <TextView
        android:id="@+id/awayTeamName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:background="@color/transparent"
        android:textAlignment="textEnd"
        android:textAppearance="?attr/textAppearanceListItem"
        android:textColor="@android:color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/awayTeamIcon"
        app:layout_constraintStart_toEndOf="@id/scoreLayout"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="Team D" />

    <ImageView
        android:id="@+id/awayTeamIcon"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:background="@color/transparent"
        android:contentDescription="@string/content_desc_away_team_icon"
        android:padding="3dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/awayTeamName"
        app:layout_constraintTop_toTopOf="parent"
        tools:src="@drawable/ic_team_d" />
</androidx.constraintlayout.widget.ConstraintLayout>
